--- a/MyCourseWork/MyCourseWork/MyCourseWork.csproj
+++ b/MyCourseWork/MyCourseWork/MyCourseWork.csproj
@@ -44,6 +44,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddUserQueryToCollection.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddUserQueryToCollection.Designer.cs">
+      <DependentUpon>AddUserQueryToCollection.cs</DependentUpon>
+    </Compile>
     <Compile Include="loginForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -58,6 +64,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AddUserQueryToCollection.resx">
+      <DependentUpon>AddUserQueryToCollection.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="loginForm.resx">
       <DependentUpon>loginForm.cs</DependentUpon>
     </EmbeddedResource>
