--- a/MyCourseWork/MyCourseWork/App.config
+++ b/MyCourseWork/MyCourseWork/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="MyCourseWork.Properties.Settings.CourseWorkSecondVariantConnectionString"
+            connectionString="Data Source=VNZK\SQLEXPRESS;Initial Catalog=CourseWorkSecondVariant;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
