--- a/MyCourseWork/MyCourseWork/App.config
+++ b/MyCourseWork/MyCourseWork/App.config
@@ -10,7 +10,7 @@
          providerName="System.Data.SqlClient" />
     
     <add name="CourseWorkSecondVariantEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VNZK\SQLEXPRESS;initial catalog=CourseWorkSecondVariant;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name ="MainDb" connectionString="Data Source=VNZK\SQLEXPRESS;Initial Catalog=CourseWorkSecondVariant;Pooling=true"/>
+    <add name ="MainDb" connectionString="Data Source=VNZK\SQLEXPRESS;Integrated Security=false;Initial Catalog=CourseWorkSecondVariant;Pooling=true"/>
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
