--- a/MyCourseWork/MyCourseWork/App.config
+++ b/MyCourseWork/MyCourseWork/App.config
@@ -6,11 +6,14 @@
   </configSections>
   <connectionStrings>
     <add name="MyCourseWork.Properties.Settings.CourseWorkSecondVariantConnectionString"
-         connectionString="Data Source=VNZK\SQLEXPRESS;Initial Catalog=CourseWorkSecondVariant;Integrated Security=True"
-         providerName="System.Data.SqlClient" />
-    
-    <add name="CourseWorkSecondVariantEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VNZK\SQLEXPRESS;initial catalog=CourseWorkSecondVariant;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name ="MainDb" connectionString="Data Source=VNZK\SQLEXPRESS;Integrated Security=false;Initial Catalog=CourseWorkSecondVariant;Pooling=true"/>
+      connectionString="Data Source=VNZK\SQLEXPRESS;Initial Catalog=CourseWorkSecondVariant;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="CourseWorkSecondVariantEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VNZK\SQLEXPRESS;initial catalog=CourseWorkSecondVariant;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="MainDb" connectionString="Data Source=VNZK\SQLEXPRESS;Integrated Security=false;Initial Catalog=CourseWorkSecondVariant;Pooling=true" />
+    <add name="MyCourseWork.Properties.Settings.CourseWorkConnectionString"
+      connectionString="Data Source=VNZK\SQLEXPRESS;Initial Catalog=CourseWork;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
